# Homework23

./: main.py  pyproject.toml
alembic/versions/: 87f4c3eec3d9_initial.py  da7151073cf0_initial.py
migrations/: env.py
src/: schemas.py
src/conf/: config.ini
src/database/: db.py  models.py
src/repository/: contact.py  training.py
src/routes/: contacts.py
static/: styles.css
templates/: index.html
